
Table users {
  id uuid [pk]
  username varchar [not null, unique]
  hashed_password varchar [not null]
  email varchar [not null, unique]
  created_at timestamptz [not null, default: `now()`]
}

Table collections {
  user_id uuid [ref: > users.id]
  id int [pk, increment]
  title varchar [not null]
  wantlist bool [not null]
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`]
}

Table cards {
  id int [pk, increment]
  name varchar [unique]
  definition json
}

Table sets {
  id int [pk, increment]
  name varchar [unique]
  release_date date [not null]
  basic_set_size int [not null]
  hyperspace_set_size int [not null]
}

Table collection_cards {
  collection_id int [not null, ref: > collections.id]
  card_id int [not null, ref: > cards.id]
  set_id int [not null]
  set_number int [not null]
  foil bool [not null, default: false]
  special bool [not null, default: false]
  amount int [not null, default: 1]
  condition int [not null, default: 1]

  indexes {
    (collection_id, set_id, set_number, foil, special, condition) [unique]
  }
}